# loto-bot

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-28-loto-polonia-analyzer.md  2026-04-28-walk-forward-validation.md
docs/superpowers/specs/: 2026-04-28-loto-polonia-analyzer-design.md  2026-04-28-walk-forward-validation-design.md
src/loto_bot/: __init__.py  backtest.py  cli.py  fetcher.py  models.py  payouts.py  reporting.py  validation.py
tests/: test_backtest.py  test_fetcher.py  test_models.py  test_payouts.py  test_reporting_cli.py  test_validation.py
